--- a/index.html
+++ b/index.html
@@ -17,20 +17,9 @@
 </head>
 
 <body>
-    <center>
-        <h3 class="Bruh"> Changing the font size of an h2 irl
-            <br>
-            <span class="Bruh">
-                NOTE- Get your right and left wrist closer to increase the font size and to decrease the size of the
-                font keep your right and left wrist far from each other
-            </span>
-            <h5 id="h5"></h5>
-            <br>
 
-        </h3>
-
-        <footer class="footer"> Made by SuperEasyOrigami</footer>
-    </center>
+    
+    <script src="main.js"><script>
 </body>
 
 </html>
