--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </h3>
 
         <footer class="footer"> Made by SuperEasyOrigami</footer>
+        <script src="main.js"><script>
     </center>
 </body>
 
